Fixed spacing in footer

--- a/style.css
+++ b/style.css
@@ -156,5 +156,5 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    margin: 0.25em 0;
+    margin: 0.5em 0;
 }
